Fixing bug where sticky-image overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,10 +111,23 @@ html.lenis body {
   line-height: 6rem;
 }
 
+.feature-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("/feature-bg-blue.svg"), url("/feature-bg-pink.svg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: left bottom -4rem, right bottom -4rem;
+  background-size: auto;
+  z-index: -1;
+  width: 100%;
+  height: 120%;
+}
+
 .footer {
   background: url("/background-footer.svg");
   background-size: cover;
-  z-index: 5;
 }
 
 .footer::after {
@@ -146,6 +159,7 @@ ul > li:nth-child(1) {
 }
 
 /* SET CLIP PATH */
+.footer,
 .content-span,
 .web-card-bg {
   clip-path: inset(0 0 0 0);
